--- a/1-screening.tex
+++ b/1-screening.tex
@@ -208,7 +208,7 @@ Similarly, computational high-throughput screenings have been applied to other s
 
 \subsubsection{Xenon/krypton separation}
 
-As a representative example of what could be done in the field of gas separation, we are going to focus on Xe/Kr separation. These noble gases have multiple applications in the medical (e.g.\ anesthesia, painkiller),\cite{cullen1951anesthetic, holstrater2011intranasal} aeronautical\cite{Patterson_2002,Coxhill_2005} or lighting sectors,\cite{Jarman_1974,Tanaka_2019} just to cite a few. The industry more commonly uses cryogenic distillation to separate xenon and krypton from the ambient air, which requires a compression and cooling of the gas mixture. But this technology can laboriously be deployed in very security-sensitive cases such as the treatment of radioactive off-gases from nuclear plants. Nanoporous materials can be used as a safer, cheaper and less energy-intensive alternative. Computational screenings is an ideal tool to kick-start the development of this new technology by identifying rapidly the best candidates.
+As a representative example of what could be done in the field of gas separation, we are going to focus on Xe/Kr separation. Nanoporous materials can be used as a safer, cheaper and less energy-intensive option for this gas separation. However, experimental design of top performing materials can be cumbersome. Computational screenings is an ideal tool to kick-start the development of this new technology by identifying rapidly the best candidates.
 
 \subsubsection{Small-scale screenings}
 
@@ -252,15 +252,20 @@ In this section, we will try to see how we can apply the above-mentioned screeni
 
 \subsection{Industrial applications}
 
-Xenon/krypton separation is a major challenge in many industrial sectors:
 
-Nuclear fuel waste
-Molten Salt Reactor
-Air sep
+The industrial interest for noble gases lies first and foremost in the many applications attached to them. For instance, xenon has multiple applications in the medical (e.g.\ anesthesia, painkiller, imaging),\cite{cullen1951anesthetic, holstrater2011intranasal,Mammarappallil_2019} aeronautical\cite{Patterson_2002,Coxhill_2005}, lithographic\cite{Abramov_2018}, microelectronic\cite{Chang_1995} or lighting sectors,\cite{Jarman_1974,Tanaka_2019} just to cite a few. To meet the demand for these noble gases, one should consider all available sources, the most obvious one being the air we breathe. Xenon and krypton have both very low atmospheric concentrations; out of a thousand liters of air we would extract at most one-tenth of a milliliter of xenon and one of krypton.\cite{kerry2007industrial} Nevertheless, direct extraction from the air remains the main production mean for xenon and krypton along with chemical plant off-gases that contains a higher concentration of inert gas (e.g. amonia purge gas). In these cases, the industry more commonly uses cryogenic distillation to extract xenon and krypton, which requires a compression and cooling of the gas mixture at very low temperatures. The separation process can be broken down into three steps: first the condensation of all gas with a boiling point higher than the oxygen, then the purification of oxygen resulting in a 20-80 xenon/krypton mixture, and finally the separation of xenon from krypton. In 1997, several cases of explosion of separation units were caused by the reaction of non-filtered dangerous hydrocarbons with purified liquid oxygen produced in the second step of this long process.\cite{distill_accident,distill_accident2} The extreme chemical and physical conditions required for cryogenic distillation support the need for less energy-intensive and safer alternatives. 
 
-Prototypes\cite{Banerjee_2014}
+The role of a dispatchable source of low-carbon energy can only be fulfilled by batteries charged by renewable energies (wind or solar) or by nuclear plants. However, one of the major criticism on this source of energy concerns the management of the radioactive waste. As promising technologies in gas separation emerge, there is an increasing need for a solution for the release of very small amount of radioactive off-gases like Kr\e{85} from nuclear spent fuels.\cite{Blomeke_1969} Furthermore, stable xenon isotopes are also produced in these spent nuclear fuels, which can be used in all the above-mentioned applications. In the context of a regained interest in nuclear energy, the fourth generation nuclear plants are projected to be built on other technologies such as the light water or the molten salt technologies.\cite{LeBlanc_2010} Molten salt reactors would continuously produce xenon and radioactive krypton in the electricity generation process.\cite{Riley_2019} The development of gas separation units in these facilities would represent a promising source for xenon production. Yet, we can laboriously imagine deploying standard cryogenic distillation units in a nuclear facility for obvious security reasons. Consequently, nanoporous materials are considered as the alternative technology for xenon/krypton separation. Zeolites are already used as a pre-purification system,\cite{kerry2007industrial} and they are now projected to be used as a standalone separation system. 
 
-\todo{Image adapted from banerjee2014}
+\begin{figure}[ht]
+  \includegraphics[width=0.49\textwidth]{figures/1-screening/Kr_treatment.jpg}
+  \includegraphics[width=0.49\textwidth]{figures/1-screening/MSR_noble_gas.jpg}
+  \caption{Representation of xenon/krypton separation process using porous materials in a nuclear fuel reprocessing plant and in a molten salt reactor. Reprinted with permission from reference \citenum{Banerjee_2014} copyright \copyright (2014) American Chemical Society and reference \citenum{Riley_2019} copyright \copyright (2019) Elsevier.}
+  \label{fgr:industrial}
+\end{figure}
+
+Banerjee et al.\ proposed a two-bed system with a first bed filled with MOFs designed for xenon separation and then a second one for radioactive krypton capture.\cite{Banerjee_2014} The authors proposed some examples of material that could be used for this separation unit; more research is needed to find out what are the best materials for these separations. In the following section, we will review the most promising materials for this separation and the structural explaining their high performance. 
+
 
 \subsection{Promising materials for the xenon/krypton separation}
 
@@ -271,10 +276,10 @@ In the early phase of the experimental design of materials for the xenon/krypton
 More recently, Li et al. proposed a rigid squarate-based MOF with ``perfect pore size'' (comparable with the kinetic diameter of Xe), and an internal pore surface decorated with very polar hydroxyl groups. This material experimentally demonstrated record-high Xe/Kr selectivity of $60.6$ at low pressure (\SI{0.2}{\bar}) and ambient temperature.\cite{Li_2019} Later, Pei et al. discovered even better performing materials with Xe/Kr selectivities of $74.1$ and $103.4$ in the same conditions \SI{0.2}{\bar} and \SI{298}{\kelvin}. In addition to the perfectly tailored pore size, the structure features two oppositely adjacent open metal sites that strongly clamps the adsorbed xenon molecule.\cite{Pei_2022} These studies clearly show the potential of polar sites that preferentially interact with the more polarizable xenon over the krypton, hence explaining these record-breaking separation performances. 
 
 \subsection{From the computer to the test tube: a rare use case}
-\todo{raconter l'histoire du screening à la synthèse}
-To connect back our study to computational screenings, we are now going to present one of the rare case of direct contribution of high-throughput screenings to the lab testing of a material. 
 
-In 2015, Simon et al.\cite{Simon_2015} analyzed the Nanoporous Materials Genome,\cite{Simon_2015_EES, Boyd_2017} a database of about 670,000 experimental and hypothetical porous material structures, including MOFs, zeolites, PPNs, ZIFs, and COFs, for candidate adsorbents for xenon/krypton separations. It is possibly the largest-scale study performed in this area, both by the sheer number of frameworks involved and by the diversity of their nature. Because such a set is too big for brute-force screening with GCMC simulations, they proposed a multiscale modelling strategy combining machine learning algorithms (trained on a diverse subset of 15,000 materials) with molecular simulations (used both to generate the ML training data, and to refine the separation properties for the top performers obtained by the ML predictor). Without going into details (see Fig.~\ref{fgr:Simon} for more details), the ML model they trained was mainly based on geometric structural descriptors, with the addition of a single energy-based descriptor: the Voronoi energy\ (i.e.\ the average energy\ of a xenon atom at the accessible nodes in the Voronoi partition of space). In addition to identifying and describing some top performing materials, the authors also analyzed the correlations between high Xe/Kr selectivity and the geometric properties of the frameworks, in order to ``rationalize the strong link between pore size and selectivity''. In particular, by developing theoretical pore models of spherical and cylindrical geometries, they could highlight the general geometrical trends observed, but also the fact that there is a wide diversity of performance beyond the geometrical features of the frameworks.
+To connect back our study to computational screenings, we are now going to present one of the rare case of direct contribution of high-throughput screenings to the lab testing of a material. In 2015, Simon et al.\cite{Simon_2015} analyzed the Nanoporous Materials Genome,\cite{Simon_2015_EES, Boyd_2017} a database of about 670,000 experimental and hypothetical porous material structures, including MOFs, zeolites, PPNs, ZIFs, and COFs, for candidate adsorbents for xenon/krypton separations. This study led to the re-discovery of SBMOF-1, a promising nanoporous material that was presented one year later.\cite{Banerjee_2016}
+
+It is possibly the largest-scale study performed in this area, both by the sheer number of frameworks involved and by the diversity of their nature. Because such a set is too big for brute-force screening with GCMC simulations, they proposed a multiscale modelling strategy combining machine learning algorithms (trained on a diverse subset of 15,000 materials) with molecular simulations (used both to generate the ML training data, and to refine the separation properties for the top performers obtained by the ML predictor). Without going into details (see Fig.~\ref{fgr:Simon} for more details), the ML model they trained was mainly based on geometric structural descriptors, with the addition of a single energy-based descriptor: the Voronoi energy\ (i.e.\ the average energy\ of a xenon atom at the accessible nodes in the Voronoi partition of space). In addition to identifying and describing some top performing materials, the authors also analyzed the correlations between high Xe/Kr selectivity and the geometric properties of the frameworks, in order to ``rationalize the strong link between pore size and selectivity''. In particular, by developing theoretical pore models of spherical and cylindrical geometries, they could highlight the general geometrical trends observed, but also the fact that there is a wide diversity of performance beyond the geometrical features of the frameworks, which suggests the key role of the chemical nature of the cavities.
 
 \begin{figure*}[t]
     \centering
@@ -284,41 +289,29 @@ In 2015, Simon et al.\cite{Simon_2015} analyzed the Nanoporous Materials Genome,
     }\label{fgr:Simon}
 \end{figure*}
 
-\todo{Only structure from computation, Simon}\cite{Li_2022}
+The chemical nature of the cavities were best described using the Voronoi energy descriptor they developed. This descriptor give an idea of the xenon adsorption isosteric heat of the material. Given these results, more studies should focus on describing the adsorption thermodynamic quantities such as the asorption enthalpy but also the henry constants. This study finally lead to the synthesis and testing of one of the top performing material in the field. However, we cannot stop but wondering why there is a discrepency between the theoretical selectivity of around $70$ of SBMOF-1 and its actual experimental selectivity of $16$. In the final perpective chapter of this thesis we will try to give an explanation for this. In the future, such close collaboration between experimental and computational teams are crucial even if they are still too rare. A recent paper suggests that these collaborations are rare accross all nanoporous fields and a lot of improvements are needed to foster cooperations betwwen the labs.\cite{Li_2022}
 
-Very rare + non accordance
 
 \subsection{The future of screening}
 
+%flexibility
 Despite the progress made, important drawbacks of the current methodologies remain. High-throughput screenings rely too much on oversimplified assumptions such as the rigidity of the framework, the absence of defects, the use of Lennard-Jones potentials and inaccurate charges. For instance, the rigidity of the framework only takes into account one conformation of the framework. Yet, thermal agitation induces a ``breathing'' movement of the framework with an amplitude dependent on its intrinsic flexibility. The pores of the framework can change depending on the number of adsorbates to interact more optimally with them, which can be induced by a change in pressure. The issue of flexibility is rarely tackled, and when considered, it is only on the few most selective structures given by an inaccurate screening based on the rigid crystal approximation. One can wonder about the results obtained if it is applied to larger sets of structures. Witman et al.\ found that flexibility applied to top performing materials can decrease the selectivity, because the pore does not have an optimal size anymore.\cite{Witman_2017} In some cases, the selectivity of a well performing material can even increase to become a top performing one. Computational screenings can be closer to predict experimental values of selectivity, diffusivity, and other key performance metrics.
 
-Many open problems remain for the design of efficient high-throughput computational screenings. The connection between different properties for a given application is not systematically integrated in the screening procedures. For example, in methane storage, the working capacity of the material is the main property to optimize, but the kinetics of the adsorption/desorption or the mechanical resistance to compaction among others also need to be considered. Designing a nanoporous material is in fact a multivariate optimization problem with tacit constraints, for example the {synthesizability}. Moreover, the transferability of the methodology to a broad range of materials is often achieved at the expense of accuracy in specific cases. And one can rightly question the universality of depending on faster but less elaborated models, which boils down to a trade-off problem between prediction accuracy and computational cost (or complexity). For instance, classical force-fields are broadly used in rigid materials for adsorption properties, but the switch to more costly \emph{ab initio} methods or the addition of flexibility can result in a more accurate description at the expense of computational resources. The use of ML algorithms can be a way out of this apparent deadlock. They can learn sufficient information on as small a subset as possible to accurately predict the performance of other materials on a large dataset. It could in the future reduce the size of the dataset that needs to be accurately screened by computationally expensive simulations, while maintaining the quality of the predictions.
+%Diffusion
+Many open problems remain for the design of efficient high-throughput computational screenings. The connection between different properties for a given application is not systematically integrated in the screening procedures. For example, in methane storage, the working capacity of the material is the main property to optimize, but the kinetics of the adsorption/desorption or the mechanical resistance to compaction among others also need to be considered. Designing a nanoporous material is in fact a multivariate optimization problem with tacit constraints, for example the {synthesizability}. For instance, the diffusion coefficients of adsorbates in a xenon/krypton separation problem can help us better understand the breakthrough simulations and eventually the whole separation process in pressure or temperature swing adsorption beds. For this reason, studyng transport properties along with uptake capacities and thermodynamic selectivity of the xenon/krypton separation can give a more complete picture of the industrial process we ultimately want to model. 
+
+%Polarization
+Moreover, the transferability of the methodology to a broad range of materials is often achieved at the expense of accuracy in specific cases. And one can rightly question the universality of depending on faster but less elaborated models, which boils down to a trade-off problem between prediction accuracy and computational cost (or complexity). For instance, classical force-fields are broadly used in rigid materials for adsorption properties, but the switch to more costly \emph{ab initio} methods or the addition of flexibility can result in a more accurate description at the expense of computational resources. The addition of polarization could be very promising since several top performing materials harbor open metal sites and highly polar sites that explain the acute affinity to xenon adsorbates. 
 
 % ML
-The development of such ML-assisted screenings is paired with the advances in data science techniques and algorithms, but more importantly to the construction of descriptors tailored to the many possible applications. This construction work cannot be dissociated to the physical and chemical intuition of the scientists. Topological, chemical, electronic and other descriptors have been developed on top of the more common geometrical and thermodynamic descriptors, which displays the importance of strong physical chemistry knowledge. The discovery of novel relevant descriptors remains the main lever for increased performance of the ML models and is closely related to a rigorous theoretical work.
+The development of ML-assisted screenings is paired with the advances in data science techniques and algorithms. Recent advances in deep learning have enabled the development of transformer-based (the technology at the base of ChatGPT for example) machine learning models to predict adsorption properties.\cite{Kang_2023,Cao_2023} More importantly, the construction of descriptors tailored to the many possible applications is also an on going work. This construction work cannot be dissociated to the physical and chemical intuition of the scientists. Topological, chemical, electronic and other descriptors have been developed on top of the more common geometrical and thermodynamic descriptors, which displays the importance of strong physical chemistry knowledge. Recently Shi et al.\ highlighted the key role of energy histograms in predicting adsorption properties.\cite{Shi_2023}
+The discovery of novel relevant descriptors remains the main lever for increased performance of the ML models and is closely related to a rigorous theoretical work.
+For these reasons, we worked during this thesis on more accurate and faster ways of calculting these interaction energies to extract valuable energy/thermodynamic descriptors.
 
 
-The development of databases is another key aspect in the promotion of data science in the field of materials science in general, and nanoporous materials chemistry in particular. The diversity of materials, the inclusion of experimental data (successful or failed), the addition of under studied classes of materials (e.g.\ amorphous) are all key aspects to upgrade the existing database. Even if existing attempts to create a centralized database have been initiated by the materials project,\cite{MaterialsProject} this database does not contain all the existing information on each material.
+The development of databases is another key aspect in the promotion of data science in the field of materials science in general, and nanoporous materials chemistry in particular. The diversity of materials, the inclusion of experimental data (successful or failed), the addition of under studied classes of materials (e.g.\ amorphous) are all key aspects to upgrade the existing database. Even if existing attempts to create a centralized database have been initiated by the materials project,\cite{MaterialsProject} this database does not contain all the existing information on each material. Furthermore, this high amount of data will need to be efficiently explored, and non supervise deep learning algorithms have been developed to do so.\cite{Park_2023} Coupled with synthesis robot, these method can navigate through the unexplored databases to find the few most interesting candidates for a given targeted application.
 
 In the future, computational high-throughput screening could be integrated more tightly into the design process of nanoporous materials, hence further improving its efficiency. The computational pre-screening can be coupled with automated screenings of the most promising materials to finally identify candidates for further studies. This automated design process is described by Lyu et al.\ in their paper on ``Digital Reticular Chemistry'' and set out promising perspectives for computational screenings in the field.\cite{Lyu_2020} Some studies are already pioneering this new research area by combining high-throughput characterizations, active learning algorithms and robotic synthesis.\cite{Greenaway_2018,Moosavi_2019} Another step towards faster industrialization would integrate process modelling to enrich the purely atomistic approach.
-
-\subsubsection{More efficient selectivity calculation}
-
-Accuracy and speed
-Current methods are not adapted to screening but for single simulations. 
-
-Integration in ml\cite{Simon_2015}
-Transformer etc..\cite{Kang_2023,Cao_2023}
-energy histograms\cite{Shi_2023}
-
-
-\subsubsection{Faster diffusion estimation}
-
-Why it is important: KAXQIL case
-
-TuTraST\cite{Mace_2019}
-
-\subsubsection{Flexibility OMS}
 
 \OnlyInSubfile{\printglobalbibliography}
 
