--- a/thesis.bib
+++ b/thesis.bib
@@ -12,7 +12,7 @@
 	doi = {10.1016/j.memsci.2007.05.032},
 	url = {https://doi.org/10.1016%2Fj.memsci.2007.05.032},
 	year = 2007,
-	month = {sep},
+	month = Sep,
 	publisher = {Elsevier {BV}},
 	volume = {301},
 	number = {1-2},
@@ -25,7 +25,7 @@
 	doi = {10.1021/acsenergylett.9b02625},
 	url = {https://doi.org/10.1021%2Facsenergylett.9b02625},
 	year = 2020,
-	month = {jan},
+	month = Jan,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {5},
 	number = {2},
@@ -38,7 +38,7 @@
 	doi = {10.1021/jacs.9b00733},
 	url = {https://doi.org/10.1021%2Fjacs.9b00733},
 	year = 2019,
-	month = {apr},
+	month = Apr,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {141},
 	number = {18},
@@ -692,7 +692,7 @@
 	doi = {10.2172/7326039},
 	url = {https://doi.org/10.2172%2F7326039},
 	year = 1976,
-	month = {nov},
+	month = Nov,
 	publisher = {Office of Scientific and Technical Information ({OSTI})},
 	author = {A Breslin},
 	title = {Guidance for air sampling at nuclear facilities. [Radiation monitoring]}
@@ -2008,7 +2008,7 @@ for Global Competitiveness},
 	doi = {10.1002/aic.15880},
 	url = {https://doi.org/10.1002%2Faic.15880},
 	year = 2017,
-	month = {aug},
+	month = Aug,
 	publisher = {Wiley},
 	volume = {64},
 	number = {1},
@@ -2021,7 +2021,7 @@ for Global Competitiveness},
 	doi = {10.1002/adma.202201502},
 	url = {https://doi.org/10.1002%2Fadma.202201502},
 	year = 2022,
-	month = {may},
+	month = May,
 	publisher = {Wiley},
 	volume = {34},
 	number = {27},
@@ -2034,7 +2034,7 @@ for Global Competitiveness},
 	doi = {10.1002/anie.198903591},
 	url = {https://doi.org/10.1002%2Fanie.198903591},
 	year = 1989,
-	month = {mar},
+	month = Mar,
 	publisher = {Wiley},
 	volume = {28},
 	number = {3},
@@ -2084,7 +2084,7 @@ for Global Competitiveness},
 	doi = {10.1021/cm1021068},
 	url = {https://doi.org/10.1021%2Fcm1021068},
 	year = 2010,
-	month = {oct},
+	month = Oct,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {22},
 	number = {21},
@@ -2097,7 +2097,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.chempr.2020.08.002},
 	url = {https://doi.org/10.1016%2Fj.chempr.2020.08.002},
 	year = 2020,
-	month = {oct},
+	month = Oct,
 	publisher = {Elsevier {BV}},
 	volume = {6},
 	number = {10},
@@ -2134,7 +2134,7 @@ for Global Competitiveness},
 	doi = {10.1126/science.1120411},
 	url = {https://doi.org/10.1126%2Fscience.1120411},
 	year = 2005,
-	month = {nov},
+	month = Nov,
 	publisher = {American Association for the Advancement of Science ({AAAS})},
 	volume = {310},
 	number = {5751},
@@ -2147,7 +2147,7 @@ for Global Competitiveness},
 	doi = {10.1021/ja00146a033},
 	url = {https://doi.org/10.1021%2Fja00146a033},
 	year = 1995,
-	month = {oct},
+	month = Oct,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {117},
 	number = {41},
@@ -2160,7 +2160,7 @@ for Global Competitiveness},
 	doi = {10.3390/membranes12121205},
 	url = {https://doi.org/10.3390%2Fmembranes12121205},
 	year = 2022,
-	month = {nov},
+	month = Nov,
 	publisher = {{MDPI} {AG}},
 	volume = {12},
 	number = {12},
@@ -2173,7 +2173,7 @@ for Global Competitiveness},
 	doi = {10.1021/ja00009a065},
 	url = {https://doi.org/10.1021%2Fja00009a065},
 	year = 1991,
-	month = {apr},
+	month = Apr,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {113},
 	number = {9},
@@ -2186,7 +2186,7 @@ for Global Competitiveness},
 	doi = {10.1038/46248},
 	url = {https://doi.org/10.1038%2F46248},
 	year = 1999,
-	month = {nov},
+	month = Nov,
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {402},
 	number = {6759},
@@ -2199,7 +2199,7 @@ for Global Competitiveness},
 	doi = {10.1126/science.1230444},
 	url = {https://doi.org/10.1126%2Fscience.1230444},
 	year = 2013,
-	month = {aug},
+	month = Aug,
 	publisher = {American Association for the Advancement of Science ({AAAS})},
 	volume = {341},
 	number = {6149},
@@ -2211,7 +2211,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.ccr.2009.05.019},
 	url = {https://doi.org/10.1016%2Fj.ccr.2009.05.019},
 	year = 2009,
-	month = {dec},
+	month = Dec,
 	publisher = {Elsevier {BV}},
 	volume = {253},
 	number = {23-24},
@@ -2224,7 +2224,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.ccr.2020.213655},
 	url = {https://doi.org/10.1016%2Fj.ccr.2020.213655},
 	year = 2021,
-	month = {mar},
+	month = Mar,
 	publisher = {Elsevier {BV}},
 	volume = {430},
 	pages = {213655},
@@ -2236,7 +2236,7 @@ for Global Competitiveness},
 	doi = {10.1038/s42256-023-00628-2},
 	url = {https://doi.org/10.1038%2Fs42256-023-00628-2},
 	year = 2023,
-	month = {mar},
+	month = Mar,
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {5},
 	number = {3},
@@ -2249,7 +2249,7 @@ for Global Competitiveness},
 	doi = {10.1021/jacs.2c11420},
 	url = {https://doi.org/10.1021%2Fjacs.2c11420},
 	year = 2023,
-	month = {jan},
+	month = Jan,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {145},
 	number = {5},
@@ -2286,7 +2286,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.inorgchem.0c01766},
 	url = {https://doi.org/10.1021%2Facs.inorgchem.0c01766},
 	year = 2020,
-	month = {jul},
+	month = Jul,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {59},
 	number = {16},
@@ -2295,24 +2295,11 @@ for Global Competitiveness},
 	title = {Boosting Selective Adsorption of Xe over Kr by Double-Accessible Open-Metal Site in Metal{\textendash}Organic Framework: Experimental and Theoretical Research},
 	journal = {Inorg. Chem.}
 }
-@article{Li_2019,
-	doi = {10.1021/jacs.9b03422},
-	url = {https://doi.org/10.1021%2Fjacs.9b03422},
-	year = 2019,
-	month = {may},
-	publisher = {American Chemical Society ({ACS})},
-	volume = {141},
-	number = {23},
-	pages = {9358--9364},
-	author = {Liangying Li and Lidong Guo and Zhiguo Zhang and Qiwei Yang and Yiwen Yang and Zongbi Bao and Qilong Ren and Jing Li},
-	title = {A Robust Squarate-Based Metal{\textendash}Organic Framework Demonstrates Record-High Affinity and Selectivity for Xenon over Krypton},
-	journal = {J. Am. Chem. Soc.}
-}
 @article{Mohamed_2016,
 	doi = {10.1002/anie.201602287},
 	url = {https://doi.org/10.1002%2Fanie.201602287},
 	year = 2016,
-	month = {may},
+	month = May,
 	publisher = {Wiley},
 	volume = {55},
 	number = {29},
@@ -2321,24 +2308,11 @@ for Global Competitiveness},
 	title = {Hybrid Ultra-Microporous Materials for Selective Xenon Adsorption and Separation},
 	journal = {Angew. Chem. Int. Ed.}
 }
-@article{Chen_2014,
-	doi = {10.1038/nmat4035},
-	url = {https://doi.org/10.1038%2Fnmat4035},
-	year = 2014,
-	month = {jul},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {13},
-	number = {10},
-	pages = {954--960},
-	author = {Linjiang Chen and Paul S. Reiss and Samantha Y. Chong and Daniel Holden and Kim E. Jelfs and Tom Hasell and Marc A. Little and Adam Kewley and Michael E. Briggs and Andrew Stephenson and K. Mark Thomas and Jayne A. Armstrong and Jon Bell and Jose Busto and Raymond Noel and Jian Liu and Denis M. Strachan and Praveen K. Thallapally and Andrew I. Cooper},
-	title = {Separation of rare gases and chiral molecules by selective binding in porous organic cages},
-	journal = {Nature Mater}
-}
 @article{Banerjee_2014,
 	doi = {10.1021/ar5003126},
 	url = {https://doi.org/10.1021%2Far5003126},
 	year = 2014,
-	month = {dec},
+	month = Dec,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {48},
 	number = {2},
@@ -2363,7 +2337,7 @@ for Global Competitiveness},
 	doi = {10.1002/anie.200703934},
 	url = {https://doi.org/10.1002%2Fanie.200703934},
 	year = 2008,
-	month = {jun},
+	month = Jun,
 	publisher = {Wiley},
 	volume = {47},
 	number = {27},
@@ -2376,7 +2350,7 @@ for Global Competitiveness},
 	doi = {10.1126/science.1083671},
 	url = {https://doi.org/10.1126%2Fscience.1083671},
 	year = 2003,
-	month = {mar},
+	month = Mar,
 	publisher = {American Association for the Advancement of Science ({AAAS})},
 	volume = {299},
 	number = {5613},
@@ -2402,7 +2376,7 @@ for Global Competitiveness},
 	doi = {10.1021/ar200028a},
 	url = {https://doi.org/10.1021%2Far200028a},
 	year = 2011,
-	month = {jun},
+	month = Jun,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {44},
 	number = {10},
@@ -2422,4 +2396,108 @@ for Global Competitiveness},
 	author = {Mar{\'{\i}}a C. Bernini and David Fairen-Jimenez and Marcelo Pasinetti and Antonio J. Ramirez-Pastor and Randall Q. Snurr},
 	title = {Screening of bio-compatible metal{\textendash}organic frameworks as potential drug carriers using Monte Carlo simulations},
 	journal = {J. Mater. Chem. B}
+}
+@article{Riley_2019,
+	doi = {10.1016/j.nucengdes.2019.02.002},
+	url = {https://doi.org/10.1016%2Fj.nucengdes.2019.02.002},
+	year = 2019,
+	month = Apr,
+	publisher = {Elsevier {BV}},
+	volume = {345},
+	pages = {94--109},
+	author = {Brian J. Riley and Joanna McFarlane and Guillermo D. DelCul and John D. Vienna and Cristian I. Contescu and Charles W. Forsberg},
+	title = {Molten salt reactor waste and effluent management strategies: A review},
+	journal = {Nuclear Engineering and Design}
+}
+@article{Mammarappallil_2019,
+	doi = {10.1097/rti.0000000000000392},
+	url = {https://doi.org/10.1097%2Frti.0000000000000392},
+	year = 2019,
+	month = Mar,
+	publisher = {Ovid Technologies (Wolters Kluwer Health)},
+	volume = {34},
+	number = {2},
+	pages = {136--150},
+	author = {Joseph G. Mammarappallil and Leith Rankine and Jim M. Wild and Bastiaan Driehuys},
+	title = {New Developments in Imaging Idiopathic Pulmonary Fibrosis With Hyperpolarized Xenon Magnetic Resonance Imaging},
+	journal = {Journal of Thoracic Imaging}
+}
+@article{Abramov_2018,
+	doi = {10.1103/physrevapplied.10.034065},
+	url = {https://doi.org/10.1103%2Fphysrevapplied.10.034065},
+	year = 2018,
+	month = Sep,
+	publisher = {American Physical Society ({APS})},
+	volume = {10},
+	number = {3},
+	author = {I. S. Abramov and E. D. Gospodchikov and A. G. Shalashov},
+	title = {Extreme-Ultraviolet Light Source for Lithography Based on an Expanding Jet of Dense Xenon Plasma Supported by Microwaves},
+	journal = {Phys. Rev. Applied}
+}
+@inproceedings{Chang_1995,
+	doi = {10.1117/12.220933},
+	url = {https://doi.org/10.1117%2F12.220933},
+	year = 1995,
+	month = Sep,
+	publisher = {{SPIE}},
+	author = {Floy I. Chang and Richard Yeh and Gisela Lin and Patrick B. Chu and Eric G. Hoffman and Ezekiel J. Kruglick and Kristofer S. J. Pister and Michael H. Hecht},
+	editor = {Wayne Bailey and M. Edward Motamedi and Fang-Chen Luo},
+	title = {Gas-phase silicon micromachining with xenon difluoride},
+	booktitle = {{SPIE} Proceedings}
+}
+@misc{distill_accident, 
+ 	title={Explosion in an Air Distillation Unit}, 
+	url={https://www.aria.developpement-durable.gouv.fr/accident/23132_en/?lang=en}, 
+	author={French Sustainable Development \& Environment Ministery}, 
+	note = {Accessed: 2023-04-27}
+} 
+@misc{distill_accident2, 
+ 	title={Explosion in a petrochemical plant}, 
+	url={https://www.aria.developpement-durable.gouv.fr/accident/11603_en/?lang=en}, 
+	author={French Sustainable Development \& Environment Ministery}, 
+	note = {Accessed: 2023-04-27}
+} 
+@techreport{Blomeke_1969,
+	doi = {10.2172/4731193},
+	url = {https://doi.org/10.2172%2F4731193},
+	year = 1969,
+	month = Jan,
+	publisher = {Office of Scientific and Technical Information ({OSTI})},
+	author = {J O Blomeke and J J Perona},
+	title = {MANAGEMENT OF NOBLE-GAS FISSION-PRODUCT WASTES FROM REPROCESSING SPENT FUELS}
+}
+@article{LeBlanc_2010,
+	doi = {10.1016/j.nucengdes.2009.12.033},
+	url = {https://doi.org/10.1016%2Fj.nucengdes.2009.12.033},
+	year = 2010,
+	month = Jun,
+	publisher = {Elsevier {BV}},
+	volume = {240},
+	number = {6},
+	pages = {1644--1656},
+	author = {David LeBlanc},
+	title = {Molten salt reactors: A new beginning for an old idea},
+	journal = {Nuclear Engineering and Design}
+}
+@article{Tao_2020,
+	doi = {10.1021/acs.inorgchem.0c01766},
+	url = {https://doi.org/10.1021%2Facs.inorgchem.0c01766},
+	year = 2020,
+	month = Jul,
+	publisher = {American Chemical Society ({ACS})},
+	volume = {59},
+	number = {16},
+	pages = {11793--11800},
+	author = {Yuan Tao and Yaling Fan and Zhenzhen Xu and Xuefeng Feng and Rajamani Krishna and Feng Luo},
+	title = {Boosting Selective Adsorption of Xe over Kr by Double-Accessible Open-Metal Site in Metal{\textendash}Organic Framework: Experimental and Theoretical Research},
+	journal = {Inorg. Chem.}
+}
+@article{Park_2023,
+	doi = {10.26434/chemrxiv-2023-71mjq-v2},
+	url = {https://doi.org/10.26434%2Fchemrxiv-2023-71mjq-v2},
+	year = 2023,
+	month = {apr},
+	publisher = {American Chemical Society ({ACS})},
+	author = {Hyunsoo Park and Sauradeep Majumdar and Xiaoqi Zhang and Jihan Kim and Berend Smit},
+	title = {Inverse design of metal-organic frameworks for direct air capture of {CO}2 via deep reinforcement learning}
 }
